--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Build Backend Docker Image
         run: |
           IMAGE_TAG=$(date +%Y%m%d%H%M%S)
-          docker build -t ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG ./backend
+          docker build -t ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG ./backend-application
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       # 🔹 Push da Imagem para o ECR do Backend
