--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -71,4 +71,4 @@ jobs:
       # 🔹 Deploy para o Kubernetes via Helm
       - name: Deploy Backend to EKS using Helm
         run: |
-          helm upgrade --install backend ./helm-charts/nginx-chart --namespace default
+          helm upgrade --install backend-application ./helm-charts/nginx-chart --namespace default
