--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Build Backend Docker Image
         if: env.SKIP_BUILD == 'false'
         run: |
-          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
+          IMAGE_TAG=$(date +%d-%m-%Y-%H-%M-%S)
           docker build -t ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG ./backend-application
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
