--- a/helm-charts/nginx-chart/templates/ingress.yaml
+++ b/helm-charts/nginx-chart/templates/ingress.yaml
@@ -4,6 +4,10 @@ kind: Ingress
 metadata:
   name: nginx-ingress
   annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/group.name: "nginx-ingress-group"
     {{- toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
   ingressClassName: {{ .Values.ingress.className }}
@@ -12,7 +16,7 @@ spec:
       http:
         paths:
           - path: /
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: nginx
