--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Build Backend Docker Image
         if: env.SKIP_BUILD == 'false'
         run: |
-          IMAGE_TAG=$(date +%d-%m-%Y-%H-%M-%S)
+          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
           docker build -t ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG ./backend-application
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
@@ -96,15 +96,11 @@ jobs:
         run: |
           aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-      # 🔹 Atualizar Helm values.yaml SOMENTE SE HOUVE BUILD DE IMAGEM
-      - name: Update Helm values.yaml
-        if: env.SKIP_BUILD == 'false'
-        run: |
-          sed -i "s|repository:.*|repository: ${{ secrets.ECR_REGISTRY_BE }}|" helm-charts/nginx-chart/values.yaml
-          sed -i "s|tag:.*|tag: ${{ env.IMAGE_TAG }}|" helm-charts/nginx-chart/values.yaml
-
       # 🔹 Deploy para o Kubernetes via Helm (se necessário)
       - name: Deploy Backend to EKS using Helm
         if: env.SKIP_DEPLOY == 'false'
         run: |
-          helm upgrade --install backend ./helm-charts/nginx-chart --namespace default
+          helm upgrade --install backend ./helm-charts/nginx-chart \
+            --namespace default \
+            --set image.repository=${{ secrets.ECR_REGISTRY_BE }} \
+            --set image.tag=${{ env.IMAGE_TAG }}
