--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -9,6 +9,8 @@ jobs:
   build-and-push:
     name: Build and Push Backend Image to ECR
     runs-on: ubuntu-latest
+    outputs:
+      IMAGE_TAG: ${{ steps.set_image_tag.outputs.IMAGE_TAG }}  # 🔹 Salvar o output para o deploy usar
 
     steps:
       - name: Checkout repository
@@ -44,13 +46,20 @@ jobs:
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
           docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY_BE }}
 
+      # 🔹 Gerar tag da imagem (corrigindo problema da tag vazia)
+      - name: Generate image tag
+        if: env.SKIP_BUILD == 'false'
+        id: set_image_tag
+        run: |
+          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT  # 🔹 Isso passa a variável para o próximo job
+
       # 🔹 Build da Imagem Docker do Backend
       - name: Build Backend Docker Image
         if: env.SKIP_BUILD == 'false'
         run: |
-          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
-          docker build -t ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG ./backend-application
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          docker build -t ${{ secrets.ECR_REGISTRY_BE }}:${{ env.IMAGE_TAG }} ./backend-application
 
       # 🔹 Push da Imagem para o ECR do Backend
       - name: Push Backend Docker Image to ECR
@@ -61,7 +70,9 @@ jobs:
   deploy:
     name: Deploy Backend to Kubernetes
     runs-on: ubuntu-latest
-    needs: build-and-push  # Só executa após a etapa de build
+    needs: build-and-push  # 🔹 Isso permite acessar o output do build
+    env:
+      IMAGE_TAG: ${{ needs.build-and-push.outputs.IMAGE_TAG }}
 
     steps:
       - name: Checkout repository
