--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -9,29 +9,14 @@ jobs:
   build-and-push:
     name: Build and Push Backend Image to ECR
     runs-on: ubuntu-latest
-    outputs:
-      IMAGE_TAG: ${{ steps.set_image_tag.outputs.IMAGE_TAG }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Garantir que temos histórico para diff
-
-      # 🔹 Verifica se houve mudanças na aplicação (backend-application)
-      - name: Check for changes in backend-application
-        id: check_backend_changes
-        run: |
-          if git diff --quiet HEAD^ HEAD -- backend-application/; then
-            echo "No changes in backend-application"
-            echo "SKIP_BUILD=true" >> $GITHUB_ENV
-          else
-            echo "Changes detected in backend-application"
-            echo "SKIP_BUILD=false" >> $GITHUB_ENV
-          fi
+          fetch-depth: 0
 
       - name: Configure AWS Credentials
-        if: env.SKIP_BUILD == 'false'
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -39,56 +24,65 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        if: env.SKIP_BUILD == 'false'
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
           docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY_BE }}
 
       - name: Generate image tag
-        if: env.SKIP_BUILD == 'false'
         id: set_image_tag
         run: |
           IMAGE_TAG=$(date +%Y%m%d%H%M%S)
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "$IMAGE_TAG" > image-tag.txt
+          echo "Generated IMAGE_TAG: $IMAGE_TAG"
+
+      - name: Upload IMAGE_TAG as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: image-tag
+          path: image-tag.txt
 
       - name: Build Backend Docker Image
-        if: env.SKIP_BUILD == 'false'
         run: |
-          docker build -t ${{ secrets.ECR_REGISTRY_BE }}:${{ env.IMAGE_TAG }} ./backend-application
+          IMAGE_TAG=$(cat image-tag.txt)
+          docker build -t ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG ./backend-application
 
       - name: Push Backend Docker Image to ECR
-        if: env.SKIP_BUILD == 'false'
         run: |
-          docker push ${{ secrets.ECR_REGISTRY_BE }}:${{ env.IMAGE_TAG }}
+          IMAGE_TAG=$(cat image-tag.txt)
+          docker push ${{ secrets.ECR_REGISTRY_BE }}:$IMAGE_TAG
 
   deploy:
     name: Deploy Backend to Kubernetes
     runs-on: ubuntu-latest
     needs: build-and-push
-    env:
-      IMAGE_TAG: ${{ needs.build-and-push.outputs.IMAGE_TAG }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Garantir que temos histórico para diff
+          fetch-depth: 0
 
-      # 🔹 Verifica se houve mudanças no Helm Chart
-      - name: Check for changes in Helm Charts
-        id: check_helm_changes
+      - name: Download IMAGE_TAG Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: image-tag
+
+      - name: Load IMAGE_TAG
         run: |
-          if git diff --quiet HEAD^ HEAD -- helm-charts/; then
-            echo "No changes in Helm Charts"
-            echo "SKIP_DEPLOY=true" >> $GITHUB_ENV
-          else
-            echo "Changes detected in Helm Charts"
-            echo "SKIP_DEPLOY=false" >> $GITHUB_ENV
+          IMAGE_TAG=$(cat image-tag.txt)
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "Retrieved IMAGE_TAG: $IMAGE_TAG"
+
+      - name: Ensure IMAGE_TAG is set
+        run: |
+          if [ -z "$IMAGE_TAG" ]; then
+            echo "Erro: IMAGE_TAG está vazia. Abortando..."
+            exit 1
           fi
+        env:
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
 
       - name: Configure AWS Credentials
-        if: env.SKIP_DEPLOY == 'false' || env.SKIP_BUILD == 'false'
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -96,51 +90,17 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Configure kubectl
-        if: env.SKIP_DEPLOY == 'false' || env.SKIP_BUILD == 'false'
         run: |
           aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-      # 🔹 Verifica se a release do Helm já existe no cluster
-      - name: Check if Helm Release Exists
-        id: check_helm_release
-        run: |
-          RELEASE_NAME="backend"
-          NAMESPACE="default"
-
-          if helm status $RELEASE_NAME -n $NAMESPACE > /dev/null 2>&1; then
-            echo "HELM_RELEASE_EXISTS=true" >> $GITHUB_ENV
-          else
-            echo "HELM_RELEASE_EXISTS=false" >> $GITHUB_ENV
-          fi
-
-      # 🔹 Garante que IMAGE_TAG está definida antes de fazer o deploy
-      - name: Ensure IMAGE_TAG is set
-        run: |
-          if [ -z "$IMAGE_TAG" ]; then
-            echo "Erro: IMAGE_TAG está vazia. Abortando..."
-            exit 1
-          fi
-
-      # 🔹 Executa o deploy se houver mudanças ou se a release não existir
       - name: Deploy Backend to EKS using Helm
-        if: env.SKIP_DEPLOY == 'false' || env.SKIP_BUILD == 'false' || env.HELM_RELEASE_EXISTS == 'false'
         run: |
-          RELEASE_NAME="backend"
-          NAMESPACE="default"
+          IMAGE_TAG=$(cat image-tag.txt)
+          echo "Deploying IMAGE_TAG: $IMAGE_TAG"
 
-          echo "Verificando release Helm..."
-          echo "HELM_RELEASE_EXISTS=${HELM_RELEASE_EXISTS}"
-
-          if [ "$HELM_RELEASE_EXISTS" = "true" ]; then
-            echo "A release '$RELEASE_NAME' já existe. Aplicando upgrade..."
-            helm upgrade $RELEASE_NAME ./helm-charts/nginx-chart \
-              --namespace $NAMESPACE \
-              --set image.repository=${{ secrets.ECR_REGISTRY_BE }} \
-              --set image.tag=$IMAGE_TAG
-          else
-            echo "A release '$RELEASE_NAME' não existe. Instalando..."
-            helm install $RELEASE_NAME ./helm-charts/nginx-chart \
-              --namespace $NAMESPACE \
-              --set image.repository=${{ secrets.ECR_REGISTRY_BE }} \
-              --set image.tag=$IMAGE_TAG
-          fi
+          helm upgrade --install backend ./helm-charts/nginx-chart \
+            --namespace default \
+            --set image.repository=${{ secrets.ECR_REGISTRY_BE }} \
+            --set image.tag=$IMAGE_TAG
+        env:
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
